--- a/Sample/appsettings.json
+++ b/Sample/appsettings.json
@@ -1,10 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Trace",
+            "Microsoft": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
