DBConnection and Logs

--- a/Sample/Properties/launchSettings.json
+++ b/Sample/Properties/launchSettings.json
@@ -19,7 +19,8 @@
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "nativeDebugging": true
     },
     "Sample": {
       "commandName": "IISExpress",
