--- a/Sample/appsettings.Development.json
+++ b/Sample/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
+  "ConnectionStrings": {
+      "DevConnection": "Server=127.0.0.1;Port=3306;Database=Sample;Uid=root;Pwd=root;"
+  },
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+      "LogLevel": {
+          "Default": "Trace",
+          "Microsoft": "Information"
+      }
+  },
+  "AllowedHosts": "*"
 }
