--- a/Sample/nlog.config
+++ b/Sample/nlog.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Trace"
+      internalLogLevel="Info"
       internalLogFile="c:\temp\internal-nlog.txt">
 
   <!-- enable asp.net core layout renderers -->
@@ -20,15 +20,6 @@
     <target xsi:type="File" name="ownFile-web" fileName="c:\temp\logs\nlog-own-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
   </targets>
-  
-  <target name="c" xsi:type="Console"  layout="$${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}"/>
-
-  <targets>
-    <default-wrapper xsi:type="AsyncWrapper">
-      <wrapper-target xsi:type="RetryingWrapper"/>
-    </default-wrapper>
-    <target name="n3" xsi:type="Network" address="tcp://localhost:4003"/>
-  </targets>
 
   <!-- rules to map from logger name to target -->
   <rules>
@@ -36,7 +27,7 @@
     <logger name="*" minlevel="Trace" writeTo="allfile" />
 
     <!--Skip non-critical Microsoft logs and so log only own logs-->
-    <logger name="Microsoft.*" maxlevel="Warn" final="true" /> <!-- BlackHole without writeTo -->
+    <logger name="Microsoft.*" maxlevel="Info" final="true" /> <!-- BlackHole without writeTo -->
     <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
   </rules>
 </nlog>
