--- a/Sample/appsettings.json
+++ b/Sample/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "ConnectionStrings": {
+        "DevConnection": "Server=127.0.0.1;Port=3306;Database=Sample;Uid=root;Pwd=root;"
+    },
     "Logging": {
         "LogLevel": {
             "Default": "Trace",
