Adding redis cache

--- a/Sample/appsettings.json
+++ b/Sample/appsettings.json
@@ -1,12 +1,16 @@
 {
-    "ConnectionStrings": {
-        "DevConnection": "Server=127.0.0.1;Port=3306;Database=Sample;Uid=root;Pwd=root;"
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Trace",
-            "Microsoft": "Information"
-        }
-    },
-    "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DevConnection": "Server=127.0.0.1;Port=3306;Database=Sample;Uid=root;Pwd=root;",
+    "RedisConnection": "localhost:6379"
+  },
+  "GlobalOptions": {
+    "UseCache": false
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Trace",
+      "Microsoft": "Information"
+    }
+  },
+  "AllowedHosts": "*"
 }
